# math-soft

./: README.md
ass01/: environment.aux  environment.tex
ass02/: Makefile  navier-stokes.aux  navier-stokes.bbl  navier-stokes.blg  navier-stokes.fdb_latexmk  navier-stokes.fls  navier-stokes.tex  references.bib
ass03/: shell.aux  shell.tex
ass04/: inter.c  inter.tex  interp.eps
ass05/: Makefile
ass05/doc/: lsq.gp
ass05/src/: lsq
ass06/: CMakeLists.txt  Chicken.h  main.cpp
ass07/: Makefile  dimension.txt  ellipsoid.py
proj/: Makefile  readme.md
proj/doc/: introduction.tex
proj/src/: step-3.cc
